# adk-rust-book

./: .gitignore  Cargo.toml  README.md
agent-sandbox/: README.md
agent-sandbox/src/: main.rs
chapter1/: README.md
chapter1/agent-trait-example/: Cargo.toml  README.md
chapter1/agent-trait-example/src/: main.rs
chapter1/arc-example/: Cargo.toml  README.md
chapter1/arc-example/src/: main.rs
chapter1/async-example/: Cargo.toml  README.md
chapter1/async-example/src/: main.rs
chapter1/borrowing-example/: Cargo.toml  README.md
chapter1/borrowing-example/src/: main.rs
chapter1/control-flow-example/: Cargo.toml  README.md
chapter1/control-flow-example/src/: main.rs
chapter1/functions-example/: Cargo.toml  README.md
chapter1/functions-example/src/: main.rs
chapter1/prelude-example/: Cargo.toml  README.md
chapter1/prelude-example/src/: main.rs
chapter1/result-example/: Cargo.toml  README.md
chapter1/result-example/src/: main.rs
chapter1/structs-enums-example/: Cargo.toml  README.md
chapter1/structs-enums-example/src/: main.rs
chapter1/types-example/: Cargo.toml  README.md
chapter1/variables-example/: Cargo.toml  README.md
chapter10/: README.md
chapter10/artifact-agent/: Cargo.toml  README.md
chapter10/memory-agent/: Cargo.toml  README.md
chapter10/rag-custom-embedder/: Cargo.toml  README.md
chapter10/rag-custom-embedder/src/: main.rs
chapter11/: README.md
chapter11/conditional-router/: Cargo.toml  README.md
chapter11/supervisor-routing/: Cargo.toml  README.md
chapter12/: README.md
chapter12/cli-launcher/: Cargo.toml  README.md
chapter12/realtime-audio/: Cargo.toml  README.md
chapter12/thinking-gemini/: Cargo.toml  README.md
chapter12/thinking-gemini/src/: main.rs
chapter13/: README.md
chapter13/eval-basic/: Cargo.toml  README.md
chapter13/eval-trajectory/: Cargo.toml  README.md
chapter13/quickstart-validation/: Cargo.toml  README.md
chapter14/: README.md
chapter14/a2a-client/: Cargo.toml  README.md
chapter14/a2a-server/: Cargo.toml  README.md
chapter14/a2a-server/src/: main.rs
chapter14/deployment-launcher/: Cargo.toml  README.md
chapter15/: README.md
chapter15/telemetry-basic/: Cargo.toml  README.md
chapter15/telemetry-demo/: Cargo.toml  README.md
chapter15/telemetry-spans/: Cargo.toml  README.md
chapter16/: README.md
chapter16/auth-audit/: Cargo.toml  README.md
chapter16/auth-identity/: Cargo.toml  README.md
chapter16/auth-identity/src/: main.rs
chapter16/auth-rbac/: Cargo.toml  README.md
chapter16/auth-rbac/src/: main.rs
chapter16/auth-sso/: Cargo.toml  README.md
chapter16/guardrails-advanced/: Cargo.toml  README.md
chapter16/guardrails-advanced/src/: main.rs
chapter16/rag-multi-collection/: Cargo.toml  README.md
chapter16/rag-multi-collection/src/: main.rs
chapter2/: README.md
chapter2/agents-example/: Cargo.toml  README.md
chapter3/: README.md
chapter3/agent-sandbox/: Cargo.toml  README.md
chapter3/hello-rust/: README.md
chapter3/my-first-agent/: Cargo.toml  README.md
chapter3/quickstart/: Cargo.toml  README.md
chapter3/template/: Cargo.toml  README.md
chapter4/: README.md
chapter4/my-minimal-agent/: Cargo.toml  README.md
chapter4/structured-output/: Cargo.toml  README.md
chapter4/structured_output/: Cargo.toml  README.md
chapter5/: README.md
chapter5/agent-setup-example/: Cargo.toml  README.md
chapter5/contact-extractor/: Cargo.toml  README.md
chapter5/content-pipeline/: Cargo.toml  README.md
chapter5/multi-turn/: Cargo.toml  README.md
chapter5/multilingual-agent/: Cargo.toml  README.md
chapter5/session-state/: Cargo.toml  README.md
chapter5/text-summarizer/: Cargo.toml  README.md
chapter5/time-aware-agent/: Cargo.toml  README.md
chapter6/: README.md
chapter6/agent-tool/: Cargo.toml  README.md
chapter6/function-tool/: Cargo.toml  README.md
chapter6/function-tool/src/: main.rs
chapter6/multi-tools/: Cargo.toml  README.md
chapter7/: README.md
chapter7/customer-service/: Cargo.toml  README.md
chapter7/loop-workflow/: Cargo.toml  README.md
chapter7/parallel-workflow/: Cargo.toml  README.md
chapter7/sequential-workflow/: Cargo.toml  README.md
chapter8/: README.md
chapter8/mongodb-sessions/: Cargo.toml  README.md
chapter8/neo4j-sessions/: Cargo.toml  README.md
chapter8/neo4j-sessions/src/: main.rs
chapter8/postgres-sessions/: Cargo.toml  README.md
chapter8/session-state/: Cargo.toml  README.md
chapter9/: README.md
chapter9/callbacks-guardrails/: Cargo.toml  README.md
chapter9/callbacks-logging/: Cargo.toml  README.md
chapter9/plugin-system/: Cargo.toml  README.md
chapter9/plugin-system/src/: main.rs
customer-support-agent/: Cargo.toml  README.md
customer-support-agent/src/: main.rs
deployment-ready-agent-service/: Cargo.toml  README.md
deployment-ready-agent-service/src/: main.rs
guarded-agent-surface/: Cargo.toml  README.md
guarded-agent-surface/src/: main.rs
hello-rust/: README.md
internal-knowledge-assistant/: Cargo.toml  README.md
internal-knowledge-assistant/src/: main.rs
iterative-content-refiner/: Cargo.toml  README.md
iterative-content-refiner/src/: main.rs
multilingual-agent/: Cargo.toml
multilingual-agent/src/: main.rs
multilingual-user-assistant/: Cargo.toml  README.md
multilingual-user-assistant/src/: main.rs
parallel-review-system/: Cargo.toml  README.md
parallel-review-system/src/: main.rs
realtime-voice-assistant/: Cargo.toml  README.md
realtime-voice-assistant-gemini/: Cargo.toml  README.md
realtime-voice-assistant-gemini/src/: main.rs
realtime-voice-assistant/src/: main.rs
research-writing-workflow/: Cargo.toml  README.md
research-writing-workflow/src/: main.rs
role-aware-operations-assistant/: Cargo.toml  README.md
role-aware-operations-assistant/src/: main.rs
scripts/: check-drift.py  check-examples.sh  smoke-examples.sh
structured-intake-extractor/: Cargo.toml  README.md
structured-intake-extractor/src/: main.rs
telemetry-aware-production-agent/: Cargo.toml  README.md
telemetry-aware-production-agent/src/: main.rs
(+46 files in other folders)
