[package]
name = "deployment-ready-agent-service"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
adk-rust = { workspace = true, features = ["agents", "artifacts", "cli", "gemini", "runner", "sessions"] }
adk-server.workspace = true
anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
tokio.workspace = true
