[package]
name = "chapter14-a2a-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
adk-core.workspace = true
adk-rust = { workspace = true, features = ["agents", "gemini"] }
adk-server.workspace = true
adk-session.workspace = true
anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
tokio.workspace = true
