[package]
name = "chapter16-auth-identity"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
adk-core.workspace = true
adk-rust = { workspace = true, features = ["agents", "gemini", "runner", "sessions"] }
adk-session.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
tokio.workspace = true
