[package]
name = "chapter16-auth-rbac"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
adk-auth.workspace = true
adk-rust = { workspace = true, features = ["agents", "gemini", "runner", "sessions"] }
adk-tool.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
