[package]
name = "chapter16-guardrails-advanced"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
adk-guardrail.workspace = true
adk-rust = { workspace = true, features = ["agents", "gemini", "guardrail", "runner", "sessions"] }
anyhow.workspace = true
dotenvy.workspace = true
tokio.workspace = true
