[package]
name = "chapter8-neo4j-sessions"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
adk-rust = { workspace = true, features = ["agents", "gemini", "sessions", "runner", "neo4j-session"] }
anyhow.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
tokio.workspace = true

