[package]
name = "chapter9-plugin-system"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
adk-plugin.workspace = true
adk-rust = { workspace = true, features = ["agents", "gemini", "sessions", "runner"] }
anyhow.workspace = true
dotenvy.workspace = true
tokio.workspace = true
